Added Publish Path for artefact

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,3 +22,6 @@ steps:
     ng build --prod
   displayName: 'npm install and build'
 - task: PublishBuildArtifacts@1
+  displayName: 'Publish Artifact: drop'
+  inputs:
+    PathtoPublish: '$(build.artifactstagingdirectory)'
