--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,6 +21,10 @@ steps:
     npm audit fix
     ng build --prod
   displayName: 'npm install and build'
+
+- task: CopyFiles@2
+  inputs:
+    targetFolder: '$(Build.ArtifactStagingDirectory)'  
 - task: PublishBuildArtifacts@1
   displayName: 'Publish Artifact: drop'
   inputs:
