Updated path to publish to working directory

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,4 +28,5 @@ steps:
 - task: PublishBuildArtifacts@1
   displayName: 'Publish Artifact: drop'
   inputs:
-    PathtoPublish: '$(build.artifactstagingdirectory)'
+    #PathtoPublish: '$(build.artifactstagingdirectory)'
+    PathtoPublish: '$(System.DefaultWorkingDirectory)/**/*.zip'
