--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -11,29 +11,30 @@ stages:
     displayName: Build
     pool:
       vmImage: $(vmImageName)
-  steps:
-  - task: NodeTool@0
-    inputs:
-      versionSpec: '10.x'
-      displayName: 'Install Node.js'
+  
+    steps:
+    - task: NodeTool@0
+      inputs:
+        versionSpec: '10.x'
+        #displayName: 'Install Node.js'
 
-    script: |
-      npm install
-      npm run build --if-present
-      npm run test --if-present
-    displayName: 'npm install, build and test'
+    - script: |
+        npm install
+        npm run build --if-present
+        npm run test --if-present
+      displayName: 'npm install, build and test'
 
-  - task: ArchiveFiles@2
-    displayName: 'Archive files'
-    inputs:
-      rootFolderOrFile: '$(System.DefaultWorkingDirectory)'
-      includeRootFolder: false
-      archiveType: zip
-      archiveFile: $(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip
-      replaceExistingArchive: true
+    - task: ArchiveFiles@2
+      displayName: 'Archive files'
+      inputs:
+        rootFolderOrFile: '$(System.DefaultWorkingDirectory)'
+        includeRootFolder: false
+        archiveType: zip
+        archiveFile: $(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip
+        replaceExistingArchive: true
 
-  - upload: $(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip
-    artifact: drop
+    - upload: $(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip
+      artifact: drop
 
 - stage: Deploy
   displayName: Deploy stage
